--- a/Nivel2-A/Documentos/Guia/guia2.tex
+++ b/Nivel2-A/Documentos/Guia/guia2.tex
@@ -110,7 +110,7 @@ Haciendo click en \emph{Pin manager} se desplegará una nueva ventana con sus pr
     \label{fig:pmg}
 \end{figure}
 
-Con la herramienta \emph{Spectrum view} puede mmostrar todas las firmas espectrales al mismo tiempo \emph{Show spectra for all pins}, o por separado \emph{Show spectra for selected pins} (Figura \ref{fig:spn}).
+Con la herramienta \emph{Spectrum view} puede mostrar todas las firmas espectrales al mismo tiempo \emph{Show spectra for all pins}, o por separado \emph{Show spectra for selected pins} (Figura \ref{fig:spn}).
 
 \begin{figure}[h!]
     \centering
