Se actualizan los apendices con nuevas funciones y herramientas.

--- a/Nivel2-B/Documentos/Guia/guia2.tex
+++ b/Nivel2-B/Documentos/Guia/guia2.tex
@@ -97,7 +97,7 @@ Utilice la imagen óptica para identificar en la imagen \emph{Sentinel-1b}:
      \item El valor de dB para el agua del canal.
  \end{enumerate}
 
-Se puede calcular el valor promedio de dB seleccionando una región especifica en la imagen (Apéndice \ref{ap:EV}).
+Se puede calcular el valor promedio de dB seleccionando una región especifica en la imagen (Apéndice \ref{ap:HA}).
 
 Repita este análisis para las imágenes en banda X y L.
 
