--- a/Nivel2-B/Documentos/Guia/apendice1.tex
+++ b/Nivel2-B/Documentos/Guia/apendice1.tex
@@ -13,20 +13,7 @@ Es posible utilizar el \href{https://www.google.com/earth/desktop/}{Google Earth
 
 Es posible exportar la visualización de la imagen completa o de una región específica desde \menu{File>Export view}. Si selecciona \menu{View as Google Earth KMZ} obtendrá un archivo \texttt{.kmz} que luego podrá abrir desde Google Earth.
 
-Para realizar este proceso la imagen debe encontrarse proyectada en coordenadas geográficas y solo se exportará la vista de la pantalla.
-
-\subsection{Reproyección}
-
-Para reproyectar una imagen vaya al menu \menu{Raster>Geometric>Reprojection}. Aquí deberá seleccionar la imagen de origen como input y la reproyectada como output. Para poder utilizar la imagen deberá elegir en \texttt{Reprojection parameters}, \texttt{Custom CRS} y allí seleccionar \texttt{Projection: Geographi Lat/Lon (WGS 84)} (Figura \ref{fig:reproj}).
-
-\begin{figure}[h!]
-    \centering
-    \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:reproj1.png}}
-    \hspace{1cm}
-    \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:reproj2.png}}
-    \caption{Herramienta de reproyección del SNAP. La imagen se proyecta en coordenadas geográficas.}
-    \label{fig:reproj}
-\end{figure}
+Para realizar este proceso la imagen debe encontrarse proyectada en coordenadas geográficas (Apéndice \ref{ap:HA}) y solo se exportará la vista de la pantalla.
 
 \section{Google earth}
 
