Se eliminan los archivos del curso 0B. Se actualiza la guia del Curso 2B

--- a/Nivel2-B/Documentos/Guia/apendice2.tex
+++ b/Nivel2-B/Documentos/Guia/apendice2.tex
@@ -1,5 +1,18 @@
 \chapter{Herramientas adicionales}\label{ap:HA}
 
+\section{Recorte}
+
+Haga click en \menu{Raster>Subset} y en la ventana que aparece elija la pestaña \menu{Geo Coordinates} (Figura \ref{fig:coordenadas}). Complete las coordenadas geográficas que contengan a la zona de interés y haga click en OK.
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.35]{fig:coordenadas.png}
+    \caption{Subset espacial de una imagen en SNAP. Se reliza en este caso utilizando las coordenadas geográficas.}
+    \label{fig:coordenadas}
+\end{figure}
+
+Obtendrá una nueva capa en el \emph{Product Explorer}. Para guardarlo haga click derecho sobre el y seleccione \menu{Save product as...}.
+
 \section{Creación de vectores}
 
 Cree un contenedor vectorial haciendo click en \menu{Vector>New Vector Data Container}. Nombrelo \path{Urbano} (Figura \ref{fig:vector-cont}). Seleccione luego la herramienta \menu{Rectangle drawing tool} de la barra de herramienta y digitalice un rectángulo sobre una región. Para confirmar la geometría haga click fuera de ella.
