Se corrige donde están las imágenes.

--- a/Nivel2-B/Documentos/Videos/clase1.tex
+++ b/Nivel2-B/Documentos/Videos/clase1.tex
@@ -57,7 +57,12 @@
 
 \subsection{Generación de una imagen}
 \begin{frame}{\secname : \subsecname}
-    AA
+  \begin{figure}
+    \centering
+    \movie[width = \textwidth,loop,autostart]{\centering\includegraphics[width=\textwidth]{fig:imagen.png}}{./figs/fig:imagen.mp4}
+    \caption{Generación de una imagen radar a partir de datos en el terreno.}
+    \label{}
+  \end{figure}
 \end{frame}
 %--- Next Frame ---%
 
