Se acomoda el tamano del segundo video.

--- a/Nivel2-B/Documentos/Videos/clase1.tex
+++ b/Nivel2-B/Documentos/Videos/clase1.tex
@@ -59,7 +59,7 @@
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
-    \movie[width = \textwidth,loop,autostart]{\centering\includegraphics[width=\textwidth]{fig:imagen.png}}{./figs/fig:imagen.mp4}
+    \movie[width = 0.95\textwidth,loop,autostart]{\centering\includegraphics[width=0.95\textwidth]{fig:imagen.png}}{./figs/fig:imagen.mp4}
     \caption{Generación de una imagen radar a partir de datos en el terreno.}
     \label{}
   \end{figure}
