Corrección de las clases 4 y 5.

--- a/Nivel2-B/Documentos/Videos/clase3.tex
+++ b/Nivel2-B/Documentos/Videos/clase3.tex
@@ -139,7 +139,7 @@
   \multicolumn{1}{p{4.5cm}}{Datos en formato complejo (real e imaginario), sin multilook y en la geometria del radar} & \multicolumn{1}{p{4.5cm}}{Datos en potencia, con multilook y proyectada al suelo} & \multicolumn{1}{p{4.5cm}}{Datos en potencia, con multilook y geocodificada sobe el elipsoide} & \multicolumn{1}{p{4.5cm}}{Datos en potencia, con multilook y geocodificada sobe el el terreno (DEM)}
   \end{tabular}%
   }
-  \caption{My caption}
+  \caption{Niveles de procesamiento típicos para una imagen SAR.}
   \label{my-label}
   \end{table}
 \end{frame}
