--- a/Nivel2-B/Documentos/Videos/clase5.tex
+++ b/Nivel2-B/Documentos/Videos/clase5.tex
@@ -3,8 +3,8 @@
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
-    \includegraphics[scale=0.7]{fig:misiones}
-    \caption{}
+    \includegraphics[width=0.7\textwidth]{fig:misiones}
+    \caption{Misiones satelitales historicas y actuales.}
     \label{}
   \end{figure}
 \end{frame}
@@ -14,18 +14,18 @@
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
     \centering
-    \includegraphics[scale=0.7]{fig:plan}
-    \caption{}
+    \includegraphics[width=0.65\textwidth]{fig:plan}
+    \caption{Satelites del plan espacial nacional.}
     \label{}
   \end{figure}
 \end{frame}
 %--- Next Frame ---%
-\subsection{Segmento de vuelvo}
+\subsection{Serie SAOCOM}
 
 \begin{frame}{\secname : \subsecname}
   \begin{columns}
-    \begin{column}{0.5\textwidth}
-     \begin{block}{??}
+    \begin{column}{0.6\textwidth}
+     \begin{block}{Mision SAOCOM}
 \begin{itemize}
   \item Dos satélites idénticos
   \item L-Band SAR (1275 Mhz)
@@ -41,16 +41,14 @@
     \item Hasta 5 minutos
   \end{itemize}
   \item Antena activa de 10m x 3.5m con 140 MTR
-  \item Panel solar de 12m2
-  \item Peso: 3 tons
 \end{itemize}
      \end{block}
     \end{column}
-    \begin{column}{0.5\textwidth}  %%<--- here
+    \begin{column}{0.4\textwidth}  %%<--- here
       \begin{figure}
         \centering
-        \includegraphics[height=0.7\textheight]{fig:pauli.png}
-        \caption{}
+        \includegraphics[width=1.1\textwidth]{fig:saocom.jpg}
+        \caption*{}
         \label{}
       \end{figure}
     \end{column}
@@ -59,16 +57,7 @@
 \end{frame}
 %--- Next Frame ---%
 
-\subsection{Despliege}
-\begin{frame}{\secname : \subsecname}
-  \begin{figure}
-    \centering
-    \includegraphics[scale=0.7]{fig:despliegue}
-    \caption{}
-    \label{}
-  \end{figure}
-\end{frame}
-%--- Next Frame ---%
+
 \subsection{Segmento de vuelvo}
 \begin{frame}{\secname : \subsecname}
 \begin{itemize}
