Correcciones a las clases 1 a 3.

--- a/Nivel2-B/Documentos/Videos/clase2.tex
+++ b/Nivel2-B/Documentos/Videos/clase2.tex
@@ -57,10 +57,20 @@
 %--- Next Frame ---%
 
 \begin{frame}{\secname : \subsecname}
+  \begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{fig:espectrozoom.png}
+    \caption{Espectro electromagnético en longitud de onda para la región de las microondas.}
+    \label{}
+  \end{figure}
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
     \begin{figure}
       \centering
-      \includegraphics[width=0.5\textwidth]{fig:interacciones.png}
-      \caption{Interacciones entre los distintos blancos según la longitud de onda.}
+      \includegraphics[width=0.9\textwidth]{fig:interacciones.png}
+      \caption{Interacciones entre los distintos blancos según la longitud de onda. De izquierda a derecha: especular, absorción, doble rebote y en volumen.}
       \label{}
     \end{figure}
 \end{frame}
@@ -146,5 +156,12 @@
     \end{column}
     \end{columns}
     con $c$ la velocidad de la luz, $B$ el \emph{bandwidth} del sistema y $L$ la longitud de la antena.
+\end{frame}
+%--- Next Frame ---%
+
+\begin{frame}{\secname : \subsecname}
+  \begin{block}[Observación:]
+    A diferencia de los satélites ópticos, la resolución en un sistema SAR no depende de la distancia entre el satélite y el blanco.
+  \end{block}
 \end{frame}
 %--- Next Frame ---%
