--- a/Nivel2-B/Documentos/Videos/clase3.tex
+++ b/Nivel2-B/Documentos/Videos/clase3.tex
@@ -1,4 +1,28 @@
 \section{Speckle y procesamiento}
+
+\subsection{Ecuación de radar}
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Definición}
+      \begin{equation}
+        P_r = \frac{P_t G_t G_r \lambda^2 \sigma}{(4\pi)^3 R^4}
+      \end{equation}
+      Con $P_r$ y $P_t$ las las potencias recibidas y transmitidas, $G_r$ y $G_t$ las ganancias del emisor y receptor, $\lambda$ la longitud de onda, $\sigma$ el coeficiente de backscatter y $R$ la distancia entre el emisor y el blanco.
+    \end{block}
+\end{frame}
+%--- Next Frame ---%
+
+\subsection{decibels}
+\begin{frame}{\secname : \subsecname}
+    \begin{block}{Definición}
+      Es común expresar la potencia de un radar en decibels cómo
+      \begin{equation}
+        P [dB] = 10\log_{10}(P_r)
+      \end{equation}
+      donde $P_r$ es una potencia reflejada.
+    \end{block}
+\end{frame}
+%--- Next Frame ---%
+
 \subsection{Speckle}
 \begin{frame}{\secname : \subsecname}
   \begin{figure}
