--- a/Nivel2-B/Documentos/Videos/presentacion.tex
+++ b/Nivel2-B/Documentos/Videos/presentacion.tex
@@ -9,7 +9,7 @@
 \title{Introducción a la teledetección SAR}
 \subtitle{Nivel 2b}
 
-\author{Tomás Zajc}
+\author{Tomás Zajc \and Francisco Nemiña} 
 
 
 \institute{SAOCOM \\ Comisión Nacional de Actividades Espaciales}
