Se agrega una pequeña introducción a cada aplicación.

--- a/Nivel2-B/Documentos/Guia/guia5.tex
+++ b/Nivel2-B/Documentos/Guia/guia5.tex
@@ -3,7 +3,7 @@ Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso
 
 \section{Detección de espejos de agua}
 
-Para la detección se espejos de agua, utilizando imágenes \emph{Sentinel 1}, durante octubre de 2017 en la zona de Chascomús, provincia de Buenos Aires, Argentina.
+En esta aplicación se verá como detectar espejos de agua, utilizando imágenes \emph{Sentinel 1}. Estudiaremos las inundaciones del mes de octubre de 2017 en la zona de Chascomús, provincia de Buenos Aires, Argentina.
 
 % Imagen antes
 % S1B_IW_GRDH_1SDV_20171007T090618_20171007T090643_007721_00DA33_E6D1
@@ -57,9 +57,9 @@ Para la detección se espejos de agua, utilizando imágenes \emph{Sentinel 1}, d
 \end{que}
 
 
-\section{Detección derrames de aceite}
+\section{Detección derrames de petroleo}
 
-Para la detección se derramos de aceite y petroleo, utilizando imágenes \emph{Sentinel 1}.
+En esta aplicación se verá como detectar derramos de petroleo, utilizando imágenes \emph{Sentinel 1}. Estudiaremos un derrame del año 2017 frente de la ciudad de Dubái, Emiratos Árabes Unidos.
 
 % Imagen antes
 % S1A_IW_GRDH_1SDV_20170311T021505_20170311T021528_015638_019B8B_9D85
@@ -75,8 +75,8 @@ Para la detección se derramos de aceite y petroleo, utilizando imágenes \emph{
 \subsection{Actividades}
 
 \begin{que}
-    Descargue la imagen del 7 de octubre del 2017
-    \begin{center}\path{ S1A_IW_GRDH_1SDV_20170102T063506_20170102T063531_014649_017D2D_D901}\end{center} del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
+    Descargue la imagen del 11 de marzo del 2017
+    \begin{center}\path{ S1A_IW_GRDH_1SDV_20170311T021505_20170311T021528_015638_019B8B_9D85}\end{center} del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
 \end{que}
 
 \begin{que}
@@ -117,6 +117,8 @@ Para la detección se derramos de aceite y petroleo, utilizando imágenes \emph{
 
 
 \section{Deforestación en Salta}
+
+En esta aplicación se verá como detectar zonas deforestadas, utilizando imágenes \emph{Sentinel 1}. Estudiaremos la deforestación en la provincia de Salta entre el año 2014 y 2017.
 
 % Imagen antes
 % S1A_IW_GRDH_1SSV_20141122T224900_20141122T224925_003400_003F6A_A171
@@ -182,6 +184,8 @@ Para la detección se derramos de aceite y petroleo, utilizando imágenes \emph{
 
 \section{Areas urbanas}
 
+En esta aplicación se verá como detectar áreas urbanas, utilizando imágenes \emph{Sentinel 1}. Obtendremos las zonas úrbanas en una región del Estado de Texas, Estados Unidos.
+
 % Imagen
 % S1B_IW_GRDH_1SDV_20180105T005129_20180105T005154_009029_010222_5BA1
 % Subset
@@ -193,7 +197,7 @@ Para la detección se derramos de aceite y petroleo, utilizando imágenes \emph{
 \subsection{Actividades}
 
 \begin{que}
-    Descargue las imagenes
+    Descargue la imagen del 5 de enero de 2018
     \begin{center}\path{S1B_IW_GRDH_1SDV_20180105T005129_20180105T005154_009029_010222_5BA1}\end{center}
       del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
 \end{que}
@@ -229,6 +233,8 @@ Para la detección se derramos de aceite y petroleo, utilizando imágenes \emph{
 \end{que}
 
 \section{Incendios}
+En esta aplicación se verá como detectar áreas afectadas por incendios, utilizando imágenes \emph{Sentinel 1}. Estudiaremos los incendios de La Pampa y Río Negro del año 2017.
+
 
 % Imagen antes
 % S1A_IW_GRDH_1SDV_20170108T092431_20170108T092456_014738_017FDD_E8CA
@@ -240,7 +246,7 @@ Para la detección se derramos de aceite y petroleo, utilizando imágenes \emph{
 % E = -64.662
 
 \begin{que}
-    Descargue las imagenes
+    Descargue las imagenes de diciembre de 2016 y enero de 2017
     \begin{center}\path{ S1A_IW_GRDH_1SDV_20170108T092431_20170108T092456_014738_017FDD_E8CA}\end{center}
     \begin{center}\path{ S1A_IW_GRDH_1SDV_20161227T092433_20161227T092458_014563_017A8D_133A}\end{center}
 
