--- a/Nivel2-B/Documentos/Guia/guia4.tex
+++ b/Nivel2-B/Documentos/Guia/guia4.tex
@@ -58,9 +58,9 @@ La descomposición de Pauli permite separar la información sobre interacciones 
 La descomposición genera tres bandas que suelen mostrarse de la siguiente manera:
 
 \begin{itemize}
-    \item Rojo: Información por procesos de un solo rebote o un número impar par de rebotes.
+    \item Azul: Información por procesos de un solo rebote o un número impar par de rebotes.
     \item Verde: Información por procesos de scatering en volumen.
-    \item Azul: Información por procesos de doble rebote o un número par de rebotes.
+    \item Rojo: Información por procesos de doble rebote o un número par de rebotes.
 \end{itemize}
 
 Obtengala usando \menu{Radar>Polarimetric>Polarimetric Decomposition} seleccionando como entrada la imagen corregida en terreno y la descomposición la de \texttt{Pauli Decomposition} en \texttt{Processing parametric} (Figura \ref{fig:pauli})
